[project]
name = "reitinhaku"
version = "0.1.0"
description = "reitinhakualgoritmien testausta. A* ja JPS"
authors = [
    {name = "VILLE HEIKKILA",email = "viheikki@gmail.com"}

]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

